# heateq-design-intersect-2023

./: .gitignore  README.md  pyproject.toml
src/heateq-design/: __init__.py  __main__.py  crankn.py  ftcs.py  upwind15.py
src/heateq_design/: __main__.py  crankn.py  ftcs.py  heateq.py  upwind15.py
test/: test_crankn.py  test_ftcs.py
tests/: test_crankn.py  test_ftcs.py  test_upwind15.py
