[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "heateq-design"
version = "1.1"
description = "Computes heat equations."
authors = ["Abhishek Biswas, <ab50@princeton.edu>"]
readme = "README.md"
homepage = "https://github.com/abiswas-odu/heateq-design-intersect-2023"
repository = "https://github.com/abiswas-odu/heateq-design-intersect-2023.git"
license = "GNU General Public License v3"
keywords= ["Heat Conduction", "FTCS", "Upwind-15", "Crank-Nicholson"]
exclude = ["tests"]

[tool.poetry.dependencies]
python = ">=3.9"
click = ">=8.0.1"
numpy = ">=1.24.3"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"

[tool.poetry.scripts]
heateq-design = "heateq_design.__main__:main"

[tool.poetry.metadata]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
]


[tool.coverage.paths]
source = ["src", "*/site-packages"]
