[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "heateq-design"
version = "1.1"
description = "Computes heat equations."
authors = [
  {name="Abhishek Biswas", email="ab50@princeton.edu"},
]
readme = "README.md"
homepage = "https://github.com/abiswas-odu/heateq-design-intersect-2023"
repository = "https://github.com/abiswas-odu/heateq-design-intersect-2023.git"
keywords= ["Heat Conduction", "FTCS", "Upwind-15", "Crank-Nicholson"]
requires-python = ">=3.9"
dependencies = ["click>=8.0.1", "numpy>=1.24.3"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
dev = ["pytest>=6.2.5"]

[project.scripts]
heateq-design = "heateq_design.__main__:main"


[tool.coverage.paths]
source = ["src"]
